--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.16.3",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@tanstack/react-query": "^5.90.7",
-    "@trpc/client": "^11.7.1",
-    "@trpc/server": "^11.7.1",
-    "@trpc/tanstack-react-query": "^11.7.1",
+    "@tanstack/react-query": "^5.90.2",
+    "@trpc/client": "^11.6.0",
+    "@trpc/server": "^11.6.0",
+    "@trpc/tanstack-react-query": "^11.6.0",
+    "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
@@ -33,7 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "prisma": "^6.19.0",
+    "prisma": "^6.16.3",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
