--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.23",
+    "@ai-sdk/google": "^2.0.17",
+    "@ai-sdk/openai": "^2.0.44",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-label": "^2.1.8",
@@ -18,6 +21,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "ai": "^5.0.60",
     "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
