--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@ai-sdk/openai": "^2.0.44",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^10.25.0",
     "@tanstack/react-query": "^5.90.2",
     "@trpc/client": "^11.6.0",
