--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/openai": "^2.0.44",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/better-auth": "^1.1.9",
+    "@polar-sh/sdk": "^0.35.4",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
