--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.35.4",
     "@prisma/client": "^6.16.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
@@ -36,8 +37,10 @@
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
