--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.7.1",
     "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
