--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
+    "@xyflow/react": "^12.9.3",
     "ai": "^5.0.60",
     "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
