--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/openai": "^2.0.44",
     "@hookform/resolvers": "^5.2.2",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.35.4",
     "@prisma/client": "^6.16.3",
