--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -38,6 +39,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "inngest": "^3.44.1",
+    "jotai": "^2.15.0",
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
