--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "inngest:dev": "inngest-cli dev"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.23",
@@ -40,6 +41,7 @@
     "date-fns": "^4.1.0",
     "inngest": "^3.44.1",
     "jotai": "^2.15.0",
+    "ky": "^1.14.0",
     "lucide-react": "^0.553.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -53,6 +55,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
+    "toposort": "^2.0.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -61,6 +64,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/toposort": "^2.0.7",
     "inngest-cli": "^1.12.1",
     "prisma": "^6.16.3",
     "tailwindcss": "^4",
