--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "handlebars": "^4.7.8",
     "inngest": "^3.44.1",
     "jotai": "^2.15.0",
     "ky": "^1.14.0",
