--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/openai": "^2.0.44",
     "@hookform/resolvers": "^5.2.2",
+    "@inngest/realtime": "^0.4.4",
     "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.35.4",
