--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@polar-sh/sdk": "^0.35.4",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
