--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "cryptr": "^6.4.0",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
     "html-entities": "^2.6.0",
