added prisma generate script

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
+    "postinstall": "prisma generate",
     "format": "biome format --write",
     "inngest:dev": "inngest-cli dev",
     "ngrok:dev": "ngrok http --url=heroic-cute-fish.ngrok-free.app 3000"
