--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# /src/generated/prisma
+/src/generated/prisma
 
 # Sentry Config File
 .env.sentry-build-plugin
