--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "biome check",
     "format": "biome format --write",
     "inngest:dev": "inngest-cli dev",
-    "ngrok:dev": "ngrok http --url=heroic-cute-fish.ngrok-free.app 3000"
+    "ngrok:dev": "ngrok http --url=heroic-cute-fish.ngrok-free.app 3000",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.23",
