--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@paralleldrive/cuid2": "^3.0.4",
     "@polar-sh/better-auth": "^1.1.9",
     "@polar-sh/sdk": "^0.35.4",
-    "@prisma/client": "^6.16.3",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -38,12 +39,13 @@
     "@trpc/tanstack-react-query": "^11.6.0",
     "@xyflow/react": "^12.9.3",
     "ai": "^5.0.60",
-    "better-auth": "^1.3.26",
+    "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cryptr": "^6.4.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "handlebars": "^4.7.8",
     "html-entities": "^2.6.0",
     "inngest": "^3.44.1",
@@ -53,6 +55,7 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.1",
+    "pg": "^8.16.3",
     "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -69,13 +72,14 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/toposort": "^2.0.7",
     "inngest-cli": "^1.12.1",
-    "prisma": "^6.16.3",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
